Налаживание парсинга и отображения изменений

--- a/OTO_GAME (ES MODULES)/index.html
+++ b/OTO_GAME (ES MODULES)/index.html
@@ -45,6 +45,7 @@
     <div class="intro-film-grain"></div>
     <div class="intro-animated-bg"></div>
     <div class="intro-vignette"></div>
+    <div class="light-beam"></div>
     
     <div class="intro-text-top">
       <div class="intro-quote-line">𝙳𝚘 𝚠𝚑𝚊𝚝 𝚝𝚑𝚘𝚞 𝚠𝚒𝚕𝚝</div>
