--- a/OTO_GAME (ES MODULES)/index.html
+++ b/OTO_GAME (ES MODULES)/index.html
@@ -33,6 +33,14 @@
   <link rel="manifest" href="manifest.json">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  
+  <!-- === ВНЕДРЕННЫЕ БИБЛИОТЕКИ VIA CDN === -->
+  <!-- Zod для валидации JSON-схем -->
+  <script src="https://cdn.jsdelivr.net/npm/zod@3.23.8/lib/index.umd.min.js"></script>
+  <!-- jsonrepair для ремонта broken JSON -->
+  <script src="https://cdn.jsdelivr.net/npm/jsonrepair@3.10.0/dist/jsonrepair.min.js"></script>
+  <!-- Yup для альтернативной валидации объектов -->
+  <script src="https://cdn.jsdelivr.net/npm/yup@1.4.0/dist/yup.umd.min.js"></script>
 </head>
 
 <body>
