Надо доработать верстку

--- a/OTO_GAME (ES MODULES)/index.html
+++ b/OTO_GAME (ES MODULES)/index.html
@@ -125,7 +125,7 @@
         <div class="stats-grid">
           <div class="stat-item"><span class="lbl">Воля:</span><span class="val" id="valWill">50</span></div>
           <div class="stat-item"><span class="lbl">Скрытность:</span><span class="val" id="valStealth">50</span></div>
-          <div class="stat-item"><span class="lbl">Влияние:</span><span class="val" id="valInf">50</span></div>
+          <div class="stat-item"><span class="lbl">Влияние:</span><span class="val" id="valInflusion">50</span></div>
           <div class="stat-item"><span class="lbl">Разум:</span><span class="val" id="valSanity">50</span></div>
         </div>
       </div>
