--- a/OTO_GAME (ES MODULES)/index.html
+++ b/OTO_GAME (ES MODULES)/index.html
@@ -123,10 +123,10 @@
       <!-- Строка: Характеристики -->
       <div class="section-row row-stats">
         <div class="stats-grid">
-          <div class="stat-item"><span class="lbl">Воля:</span><span class="val" id="valWill">50</span></div>
-          <div class="stat-item"><span class="lbl">Скрытность:</span><span class="val" id="valStealth">50</span></div>
-          <div class="stat-item"><span class="lbl">Влияние:</span><span class="val" id="valInfluence">50</span></div>
-          <div class="stat-item"><span class="lbl">Разум:</span><span class="val" id="valSanity">50</span></div>
+          <div class="stat-item"><span class="val" id="valWill">50</span></div>
+          <div class="stat-item"><span class="val" id="valStealth">50</span></div>
+          <div class="stat-item"><span class="val" id="valInfluence">50</span></div>
+          <div class="stat-item"><span class="val" id="valSanity">50</span></div>
         </div>
       </div>
     </section>
