Добавлен модуль debug-state.js для отладки состояния объектов game_item в консоли браузера

--- a/OTO_GAME (ES MODULES)/index.html
+++ b/OTO_GAME (ES MODULES)/index.html
@@ -356,5 +356,9 @@
   </div>
 
   <script type="module" src="js/APP.js"></script>
+    <!-- Команды для дебага автоматически станут доступны для вызова из консоли -->
+<script type="module">
+  import { DebugState } from './js/debug-state.js';
+</script>
 </body>
 </html>
