Исправление сохранения и загрузки нового сгенерированного сюжета

--- a/OTO_GAME (ES MODULES)/index.html
+++ b/OTO_GAME (ES MODULES)/index.html
@@ -239,11 +239,11 @@
             <h3><i class="fas fa-key"></i> Ключи API</h3>
             <div id="openrouterKeyField" class="api-key-field">
               <span class="api-key-label">OpenRouter Key</span>
-              <input type="password" id="apiKeyOpenrouterInput" class="form-input" placeholder="sk-or-v1-...">
+              <input type="password" id="apiKeyOpenrouterInput" class="form-input" placeholder="sk-...">
             </div>
             <div id="vsegptKeyField" class="api-key-field">
               <span class="api-key-label">VseGpt Key</span>
-              <input type="password" id="apiKeyVsegptInput" class="form-input" placeholder="sk-...">
+              <input type="password" id="apiKeyVsegptInput" class="form-input" placeholder="sk-or-vv...">
             </div>
             <button class="btn btn-submit" id="testCurrentProviderBtn" style="width:100%; margin-top:0.5rem;">
               <i class="fas fa-vial"></i> Тест
