В процессе доработки возможности множественного вступления в различные организации

--- a/OTO_GAME (ES MODULES)/index.html
+++ b/OTO_GAME (ES MODULES)/index.html
@@ -199,6 +199,8 @@
              <div class="info-container">
                <div class="persona-text" id="personalityDisplay">...</div>
                <div class="degrees-text" id="degreeListUI"></div>
+               <!-- После контейнера с характеристиками героя -->
+<div id="organizationsContainer" style="display: none;"></div>
              </div>
            </div>
         </div>
